# Reverse-VibeCoding

./: .gitignore  README.md  pyproject.toml  reverse_vibe_coding_mvp_plan.md
.agents/: global_guardrails.md  global_prompt.md  mentor_guardrails.md
.agents/prompts/: mentor.md
.agents/rubrics/: engineering_review.md
.agents/schemas/: progress.schema.yaml  task.schema.yaml
generators/: README.md
hidden_tests/: README.md
sandbox/test_project/: .env.example  requirements.txt
sandbox/test_project/.rv/: agent_context.md  agent_handoff.md  agent_handoff_short.md  file_map.md  frontend_dependencies.json  hidden_manifest.json  project.json
sandbox/test_project/backend/: README.md  pyproject.toml
sandbox/test_project/backend/app/api/routes/: todos.py
sandbox/test_project/backend/app/db/: sqlite.py
sandbox/test_project/backend/app/repositories/: __init__.py  todo_repository.py
sandbox/test_project/backend/app/schemas/: todo.py
sandbox/test_project/backend/docs/: domain.md
sandbox/test_project/backend/tests/: test_todos.py
sandbox/test_project/mobile/: README.md  app.json  package.json
sandbox/test_project_01/: requirements.txt
sandbox/test_project_01/.github/: copilot-instructions.md
sandbox/test_project_01/.rv/: file_map.md  (+6 more)
sandbox/test_project_01/backend/: README.md  manage.py  pyproject.toml
sandbox/test_project_01/backend/app/: settings.py  urls.py
sandbox/test_project_01/backend/app/repositories/: todo_repository.py
sandbox/test_project_01/backend/app/tests/: test_todo_repository.py
sandbox/test_project_02/: AGENTS.md  README.md
src/reverse_vibecoding/: __init__.py  bug_seeds.py  catalog.py  generator.py  models.py  rendering.py  template_composer.py  template_resolver.py
templates/: README.md
templates/backend/fastapi/base/files/backend/: README.md  pyproject.toml
templates/backend/fastapi/base/files/backend/app/: __init__.py  main.py
templates/backend/fastapi/base/files/backend/tests/: test_health.py
tests/: test_bug_seeds.py  test_cli_helpers.py  test_generator.py  test_template_composer.py  test_template_resolver.py
(+254 files in other folders)
