[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-vibecoding"
version = "0.1.0"
description = "Core project-generation frame for Reverse Vibe Coding."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kien Le" }]
dependencies = [
    "typer >= 0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
rev-vib = "reverse_vibecoding.cli.app:app"
