[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-vibe-django-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["django>=5.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-django>=4.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
